# Containers

./: CMakeList.txt
.github/workflows/: cmake.yml
bidirectional list/: .project  CMakeLists.txt  main.cpp
bidirectional list/gTests/: AllTests.cpp  CMakeLists.txt  helpForTests.h
bidirectional list/inc/: CMakeLists.txt  buffer.h  list.h
bidirectional list/src/: CMakeLists.txt  main.cpp
